# NotStickGame

./: .gitignore  Alphabet Soup.pixil  New Text Document (2).txt  README.md  colors.py
math_game/: Cargo.toml  TODO.txt  asdf  data  vals.txt
math_game/BattleSceneData/: Battle Ground 1st Iteration.pixil  Battle Library Lounge Start.pixil  Cafeteria Battle Scene.pixil  English Room Battle Scene.pixil  House Battle Scene 1 (1).pixil  House Battle Scene 2.pixil  House Battle Scene Interior.pixil  Iteration 2.pixil  Library Battle Scene .pixil  Lounge Battle Scene.pixil  Lower Windows BattleScene.pixil  Math Room Battle Scene.pixil  Pond Battle Scene.pixil  School Battle Scene Exterior.pixil  School Hallway Battle Scene.pixil  Stoor Battle Outside.pixil  house battle scene 1.pixil
math_game/SpriteData/: back_nav0.txt
math_game/SpriteData/Death/: 0.txt  1.txt  data.json
math_game/SpriteData/Nav/: back_nav0.txt  nav0.txt
math_game/SpriteData/Not Racist Turtle/: 3.txt
math_game/SpriteData/Turtle/: data.json
math_game/SpriteData/nuggiesaurus/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  data.json
math_game/SpriteData/parasite/: 1.txt  2.txt  3.txt  4.txt  data.json
math_game/SpriteData/punching bag/: 0.txt  1.txt  2.txt  3.txt  4.txt  data.json
math_game/WorldData/: dots.txt  houses.txt  template_data.json  test.rs  test.txt  u.txt
math_game/WorldData/dots/: data.json  picture.txt
math_game/WorldData/house-garage/: Garage Night (1).pixil  Garage Night.pixil  data.json  picture.txt  picture.txt_night.txt
math_game/src/: main.rs  render.rs
playerfix/: done  (+2 more)
(+384 files in other folders)
