[package]
name = "math_game"
version = "0.1.0"
edition = "2021"

#compile harder
[profile.release]
lto = 'thin'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.9.0"
winit = "0.27.3"
hex = "0.4"
rayon = "1.6.0"
winit_input_helper = "0.13.0"
