[package]
name = "math_game"
version = "0.1.0"
edition = "2021"

#compile harder
[profile.release]
lto = "fat"
debug = 1
#codegen-units = 1

[profile.dev]
lto = "thin"
opt-level = 1
codegen-units = 32

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.9.0"
winit = "0.27.3"
hex = "0.4"
rayon = "1.6.0"
winit_input_helper = "0.13.0"
serde_json = "1.0.89"
coz = "0.1.3"
#miniserde = "0.1.28"
